# server/router.js
@@ -1,10 +1,9 @@
 const router = require("express").Router();
 const authRoutes = require("./router/authRoutes");
+const quizRoutes = require("./router/quizRoutes");
 
-/**
- *  @swagger
- *  /auth
- */
 router.use("/auth", authRoutes);
+
+router.use("/quiz", quizRoutes);
 
 module.exports = router;
